add Data; describe testing folder; try except in lang_detect service; delete in_progress folder; add some info about this to README.md

--- a/analyzer_71.ipynb
+++ b/analyzer_71.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T12:44:17.350Z"
+     "start_time": "2018-11-14T16:29:36.139Z"
     }
    },
    "outputs": [
@@ -25,21 +25,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13571/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 14:44:29] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:45:24] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:46:56] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:50:36] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:50:36] \"\u001b[33mPOST /rank HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:53:44] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:53:44] \"\u001b[33mPOST /rank HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:53:59] \"\u001b[33mPOST /rank HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:54:04] \"\u001b[33mPOST /rank HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:54:27] \"\u001b[33mPOST /rank HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:56:31] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 14:57:37] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 15:00:22] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 15:00:27] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 15:00:35] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:46] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -48,10 +41,12 @@
     "from flask import request\n",
     "import json\n",
     "import requests\n",
+    "import re\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
+    "regex = re.compile('[!,/\\().%]')\n",
     "\n",
     "@app.route(\"/analyze\", methods=['GET', 'POST'])\n",
     "def analyze():\n",
@@ -65,7 +60,7 @@
     "        data = request.json\n",
     "        \n",
     "        textes = data[\"textes\"]\n",
-    "        \n",
+    "        textes = [regex.sub(' ',text) for text in textes]\n",
     "        r_lang = requests.post('http://127.0.0.1:13567/lang_detect', json={'textes' : textes}).text\n",
     "        langs = json.loads(r_lang)['langs']\n",
     "        \n",
