--- a/lang_detection_67.ipynb
+++ b/lang_detection_67.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T12:44:21.455Z"
+     "start_time": "2018-11-14T16:21:19.272Z"
     }
    },
    "outputs": [
@@ -25,140 +25,17 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13567/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 14:44:29] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ssds']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:45:24] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ssds']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:46:56] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ssds']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:50:36] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ssds']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:53:44] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ssds']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:56:31] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['о']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:57:37] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['о']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:22] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['о']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:27] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['тематик']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:35] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['тематик дан']\n"
+      "127.0.0.1 - - [14/Nov/2018 18:21:52] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:24:25] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:27:30] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:18] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -180,7 +57,12 @@
     "    if request.method=='POST':\n",
     "        data = request.json\n",
     "        textes = data[\"textes\"]\n",
-    "        langs = [detect(text) for text in textes]\n",
+    "        langs = []\n",
+    "        for text in textes:\n",
+    "            try:\n",
+    "                langs.append(detect(text))\n",
+    "            except:\n",
+    "                langs.append('None')\n",
     "        # may use probabilities of language for logging\n",
     "\n",
     "        return json.dumps({'status':'ok',\n",
