--- a/search_68.ipynb
+++ b/search_68.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T12:56:10.335Z"
+     "start_time": "2018-11-14T15:45:10.830Z"
     },
     "scrolled": true
    },
@@ -26,79 +26,17 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 14:56:31] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['о']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:57:37] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['о']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:22] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['о']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:27] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['тематик']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:35] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['тематик', 'дан']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:01:26] \"\u001b[33mGET /gen204?invalidResponse=q=https%3A%2F%2Ftranslate.googleapis.com%2Ftranslate_a%2Fsingle%3Fclient%3Dgtx%26s,ql=190,r=,rl=0 HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [14/Nov/2018 15:01:26] \"\u001b[33mGET /gen204?invalidResponse=q=https%3A%2F%2Ftranslate.googleapis.com%2Ftranslate_a%2Fsingle%3Fclient%3Dgtx%26s,ql=173,r=,rl=0 HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [14/Nov/2018 15:01:26] \"\u001b[33mGET /gen204?invalidResponse=q=https%3A%2F%2Ftranslate.googleapis.com%2Ftranslate_a%2Fsingle%3Fclient%3Dgtx%26s,ql=196,r=,rl=0 HTTP/1.1\u001b[0m\" 404 -\n"
+      "127.0.0.1 - - [14/Nov/2018 17:45:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 17:45:35] \"\u001b[37mGET /? HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 17:45:41] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
