--- a/readme.ipynb
+++ b/readme.ipynb
@@ -20,18 +20,17 @@
     "### search_68\n",
     "Search server provide **UI hosting** and **all search workflow**\n",
     "\n",
-    "Receive: ajax post request from user interface with meta and search\n",
+    "Receive: ajax post request from user interface with meta and search<br>\n",
     "Return: ranked docs\n",
+    "\n",
     "Make call to:\n",
     "- Analyzer service (analyzer_71) with user search query and receive stemmed tokenized query and lang\n",
     "- Rank service (rank_70) with preprocessed query\n",
     "\n",
     "### analyzer_71\n",
     "Analyzer provide **stemm, tokenize and lang detect** workflow\n",
-    "> Later will be 3 separate services (maybe)\n",
     "    \n",
-    "Receive: list of lists of textes\n",
-    "\n",
+    "Receive: list of lists of textes<br>\n",
     "Return: list of lists of stemmed tokens for each document & list of languages codes\n",
     "\n",
     "Make call to:\n",
@@ -41,25 +40,25 @@
     "### stemmer_66\n",
     "Provide stemming and tokenization\n",
     "\n",
-    "Receive: text document and language\n",
+    "Receive: text document and language<br>\n",
     "Return: list of stemmed tokens for document\n",
     "\n",
     "### lang_detection_67\n",
     "Make language detection of texts list\n",
     "\n",
-    "Receive: list of strs\n",
+    "Receive: list of strs<br>\n",
     "Returns: list of detected languages (strs code like de, en etc.)\n",
     "\n",
     "### rank_70\n",
-    "Make search in index and rank documents\n",
+    "Make search in index and rank documents using paper.index module\n",
     "\n",
-    "Receive: list of meta, stemmed_query\n",
+    "Receive: list of meta, stemmed_query<br>\n",
     "Return: list of ranked documents\n",
     "\n",
     "### updater_72\n",
-    "Make index update\n",
+    "Make index update using paper.index module\n",
     "\n",
-    "Receive: textes - list of strs\n",
+    "Receive: textes - list of strs<br>\n",
     "Return: list of ids of updated documents\n",
     "\n",
     "Make call to:\n",
@@ -78,6 +77,11 @@
     "`search(tokens)` | **tokens** - stemmed tokens for search  | Make search (boolean AND - intersect of sets)<br>Return: returns set of doc_ids strs (like \"23\" or \"12345\")\n",
     "`get_docs(ids, is_str=False)` | **ids** - int ids of docs if **is_str=False**,<br>in other case: **ids** - strs of ids like 'doc:id' | Get docs by their ids<br>Returns: list of strs (documents textes)\n",
     "\n",
+    "## Testing\n",
+    "There is a folder **testing** where are some notebooks for testing apis (lang_detect, update)\n",
+    "\n",
+    "## Data\n",
+    "Data folder consist eval_textes.csv and \n",
     "\n",
     "# TODO\n",
     "- [ ] Make doc class\n",
@@ -85,7 +89,9 @@
     "- [ ] Make other functions for index like delete(ids) etc.\n",
     "- [ ] Make doc as a HASH instance in redis database\n",
     "- [ ] Config file for ports and other stuff\n",
-    "- [ ] Config for redis db"
+    "- [ ] Config for redis db\n",
+    "- [ ] Make Stemmer for other languages\n",
+    "- [ ] Make function to create Index from parsed data from hh.ru"
    ]
   }
  ],
