--- a/stemmer_66.ipynb
+++ b/stemmer_66.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T12:44:10.046Z"
+     "start_time": "2018-11-14T15:45:12.583Z"
     },
     "scrolled": true
    },
@@ -26,7 +26,7 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 14:44:29] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 17:45:40] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -34,59 +34,57 @@
      "output_type": "stream",
      "text": [
       "POST\n",
-      "sv\n"
+      "POST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:45:24] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:24:53] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POST\n",
-      "sv\n"
+      "POST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:46:56] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:27:57] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POST\n",
-      "sv\n"
+      "POST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:50:36] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POST\n",
-      "sv\n"
+      "POST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:53:44] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -94,82 +92,64 @@
      "output_type": "stream",
      "text": [
       "POST\n",
-      "sv\n"
+      "POST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:56:31] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POST\n",
-      "mk\n"
+      "POST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Nov/2018 14:57:37] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POST\n",
-      "mk\n"
+      "POST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:22] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:30:45] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POST\n",
-      "mk\n"
+      "POST\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:27] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POST\n",
-      "mk\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 15:00:35] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n",
-      "bg\n"
+      "POST\n"
      ]
     }
    ],
