--- a/readme.ipynb
+++ b/readme.ipynb
@@ -81,7 +81,7 @@
     "There is a folder **testing** where are some notebooks for testing apis (lang_detect, update)\n",
     "\n",
     "## Data\n",
-    "Data folder consist eval_textes.csv and \n",
+    "Data folder consist eval_textes.csv and hhru.json (parsed vacancies from hh.ru)\n",
     "\n",
     "# TODO\n",
     "- [ ] Make doc class\n",
