--- a/readme.ipynb
+++ b/readme.ipynb
@@ -10,6 +10,7 @@
     "- Services description\n",
     "- Index realization\n",
     "- Testing\n",
+    "- Data\n",
     "- TODO\n",
     "\n",
     "## Services:\n",
