--- a/updater_72.ipynb
+++ b/updater_72.ipynb
@@ -10,22 +10,10 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: Do not use the development server in a production environment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:13572/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /update HTTP/1.1\u001b[0m\" 200 -\n"
+      " * Running on http://0.0.0.0:13572/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -93,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
