--- a/lang_detection_67.ipynb
+++ b/lang_detection_67.ipynb
@@ -10,32 +10,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: Do not use the development server in a production environment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13567/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 18:21:52] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:24:25] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:27:30] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:18] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [15/Nov/2018 18:52:32] \"POST /lang_detect HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [15/Nov/2018 18:52:49] \"POST /lang_detect HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -92,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
