remove hhru.json, index classes from paper; create config.py, modify all services to use config and helper function post_request

--- a/analyzer_71.ipynb
+++ b/analyzer_71.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T16:29:36.139Z"
+     "start_time": "2018-11-16T15:03:00.009Z"
     }
    },
    "outputs": [
@@ -25,30 +25,27 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13571/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:46] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [16/Nov/2018 17:03:06] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
+    "import json\n",
+    "import re\n",
+    "\n",
+    "import requests\n",
     "from flask import Flask\n",
     "from flask import request\n",
-    "import json\n",
-    "import requests\n",
-    "import re\n",
+    "\n",
+    "from paper.config import *\n",
+    "from paper.utils import post_request\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
     "regex = re.compile('[!,/\\().%]')\n",
     "\n",
-    "@app.route(\"/analyze\", methods=['GET', 'POST'])\n",
+    "@app.route(ANALYZER_PATH, methods=['GET', 'POST'])\n",
     "def analyze():\n",
     "    \"\"\"\n",
     "    Analyzer provide stemm, tokenize and lang detect workflow\n",
@@ -60,12 +57,15 @@
     "        data = request.json\n",
     "        \n",
     "        textes = data[\"textes\"]\n",
-    "        textes = [regex.sub(' ',text) for text in textes]\n",
-    "        r_lang = requests.post('http://127.0.0.1:13567/lang_detect', json={'textes' : textes}).text\n",
-    "        langs = json.loads(r_lang)['langs']\n",
+    "        textes = [regex.sub(' ', text) for text in textes]\n",
     "        \n",
-    "        r_stemmed = requests.post('http://127.0.0.1:13566/stemmer', json={'textes' : textes, 'langs': langs}).text\n",
-    "        stemmed_docs = json.loads(r_stemmed)['stemmed']\n",
+    "        textes_json = {'textes' : textes}\n",
+    "        r_lang = post_request(LANGDETECT_PORT, LANGDETECT_PATH, textes_json)\n",
+    "        langs = r_lang['langs']\n",
+    "        \n",
+    "        stemm_json = {'textes' : textes, 'langs': langs}\n",
+    "        r_stemmed = post_request(STEMMER_PORT, STEMMER_PATH, stemm_json)\n",
+    "        stemmed_docs = r_stemmed['stemmed']\n",
     "\n",
     "        return json.dumps({'status':'ok',\n",
     "                           'langs': langs,\n",
@@ -75,7 +75,7 @@
     "    \n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(host='0.0.0.0', port=13571)"
+    "    app.run(host='0.0.0.0', port=ANALYZER_PORT)"
    ]
   }
  ],
