--- a/rank_70.ipynb
+++ b/rank_70.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T15:45:09.094Z"
+     "start_time": "2018-11-16T15:14:02.662Z"
     }
    },
    "outputs": [
@@ -25,23 +25,19 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13570/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 17:45:40] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [16/Nov/2018 17:14:28] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [16/Nov/2018 17:14:39] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
-    "from flask import Flask\n",
-    "from flask import request\n",
     "import json\n",
     "\n",
+    "from flask import Flask\n",
+    "from flask import request\n",
+    "\n",
     "from paper import index\n",
+    "from paper.config import *\n",
     "\n",
     "# update index with eval_textes.csv for testing\n",
     "index.from_eval_texts()\n",
@@ -50,7 +46,7 @@
     "app = Flask(__name__)\n",
     "\n",
     "\n",
-    "@app.route(\"/rank\", methods=['GET', 'POST'])\n",
+    "@app.route(RANK_PATH, methods=['GET', 'POST'])\n",
     "def rank():\n",
     "    \"\"\"\n",
     "    Receive: list of meta, stemmed_query\n",
@@ -65,15 +61,15 @@
     "        \n",
     "        docs_ids = index.search(stemmed_query)\n",
     "        docs = index.get_docs(docs_ids)\n",
-    "        # --- make rank ----\n",
+    "        # --- TODO: implement rank here ----\n",
     "        ranked = list(docs)\n",
-    "        # ------------------\n",
+    "\n",
     "        return json.dumps({'status':'ok', 'ranked': ranked})\n",
     "    else:\n",
     "        return \"post json {'meta': meta, 'stemmed_query': stemmed_query}\"\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(host='0.0.0.0', port=13570)"
+    "    app.run(host='0.0.0.0', port=RANK_PORT)"
    ]
   },
   {
