--- a/stemmer_66.ipynb
+++ b/stemmer_66.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T15:45:12.583Z"
+     "start_time": "2018-11-16T15:14:05.566Z"
     },
     "scrolled": true
    },
@@ -26,140 +26,22 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 17:45:40] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n",
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 18:24:53] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 18:27:57] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n",
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 18:30:45] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
+      "127.0.0.1 - - [16/Nov/2018 17:14:28] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [16/Nov/2018 17:14:39] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
+    "import json\n",
+    "\n",
+    "\n",
     "from flask import Flask\n",
     "from flask import request\n",
     "import nltk\n",
     "from nltk import wordpunct_tokenize\n",
     "\n",
-    "import json\n",
+    "from paper.config import *\n",
+    "\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
@@ -167,14 +49,12 @@
     "def hello():\n",
     "    return \"Hello World!\"\n",
     "\n",
-    "@app.route(\"/stemmer\", methods=['GET','POST'])\n",
+    "@app.route(STEMMER_PATH, methods=['GET','POST'])\n",
     "def stemmer():\n",
     "    \"\"\"\n",
     "    Receive: text document and language\n",
     "    Return: list of stemmed tokens for document\n",
     "    \"\"\"\n",
-    "  \n",
-    "    print(request.method)\n",
     "    if request.method=='POST':\n",
     "        data = request.json\n",
     "        textes = data[\"textes\"]\n",
@@ -183,6 +63,7 @@
     "        stemmer_ru = nltk.stem.snowball.RussianStemmer()\n",
     "        stemmer_en = nltk.stem.porter.PorterStemmer()\n",
     "        stemmed = []\n",
+    "        \n",
     "        for text, lang in zip(textes, langs):\n",
     "            tokens = wordpunct_tokenize(text)\n",
     "            if lang=='ru': \n",
@@ -197,7 +78,7 @@
     "        return \"provide json {'textes': 'textes', 'lang': 'lang'}\"\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(host='0.0.0.0', port=13566)"
+    "    app.run(host='0.0.0.0', port=STEMMER_PORT)"
    ]
   },
   {
