--- a/updater_72.ipynb
+++ b/updater_72.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T16:29:25.267Z"
+     "start_time": "2018-11-15T14:42:51.397Z"
     }
    },
    "outputs": [
@@ -25,7 +25,83 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13572/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /update HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [15/Nov/2018 16:43:40] \"\u001b[37mGET /update HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [15/Nov/2018 16:43:56] \"\u001b[37mGET /update HTTP/1.1\u001b[0m\" 200 -\n",
+      "[2018-11-15 16:43:56,813] ERROR in app: Exception on /update [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/connection.py\", line 141, in _new_conn\n",
+      "    (self.host, self.port), self.timeout, **extra_kw)\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/util/connection.py\", line 83, in create_connection\n",
+      "    raise err\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/util/connection.py\", line 73, in create_connection\n",
+      "    sock.connect(sa)\n",
+      "ConnectionRefusedError: [Errno 61] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 601, in urlopen\n",
+      "    chunked=chunked)\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 357, in _make_request\n",
+      "    conn.request(method, url, **httplib_request_kw)\n",
+      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/http/client.py\", line 1239, in request\n",
+      "    self._send_request(method, url, body, headers, encode_chunked)\n",
+      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/http/client.py\", line 1285, in _send_request\n",
+      "    self.endheaders(body, encode_chunked=encode_chunked)\n",
+      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/http/client.py\", line 1234, in endheaders\n",
+      "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
+      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/http/client.py\", line 1026, in _send_output\n",
+      "    self.send(msg)\n",
+      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/http/client.py\", line 964, in send\n",
+      "    self.connect()\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/connection.py\", line 166, in connect\n",
+      "    conn = self._new_conn()\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/connection.py\", line 150, in _new_conn\n",
+      "    self, \"Failed to establish a new connection: %s\" % e)\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x111fa07f0>: Failed to establish a new connection: [Errno 61] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/requests/adapters.py\", line 445, in send\n",
+      "    timeout=timeout\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 639, in urlopen\n",
+      "    _stacktrace=sys.exc_info()[2])\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/urllib3/util/retry.py\", line 388, in increment\n",
+      "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='127.0.0.1', port=13571): Max retries exceeded with url: /analyze (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x111fa07f0>: Failed to establish a new connection: [Errno 61] Connection refused',))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
+      "    raise value\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"<ipython-input-2-4e3f77dd567d>\", line 22, in update\n",
+      "    r_analyzing_query = requests.post('http://127.0.0.1:13571/analyze', json={'textes' : textes}).text\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/requests/api.py\", line 112, in post\n",
+      "    return request('post', url, data=data, json=json, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/requests/api.py\", line 58, in request\n",
+      "    return session.request(method=method, url=url, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/requests/sessions.py\", line 512, in request\n",
+      "    resp = self.send(prep, **send_kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/requests/sessions.py\", line 622, in send\n",
+      "    r = adapter.send(request, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/requests/adapters.py\", line 513, in send\n",
+      "    raise ConnectionError(e, request=request)\n",
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='127.0.0.1', port=13571): Max retries exceeded with url: /analyze (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x111fa07f0>: Failed to establish a new connection: [Errno 61] Connection refused',))\n",
+      "127.0.0.1 - - [15/Nov/2018 16:43:56] \"\u001b[1m\u001b[35mPOST /update HTTP/1.1\u001b[0m\" 500 -\n",
+      "127.0.0.1 - - [15/Nov/2018 16:44:45] \"\u001b[37mGET /update HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [15/Nov/2018 16:45:44] \"\u001b[37mPOST /update HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
