--- a/search_68.ipynb
+++ b/search_68.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-14T15:45:10.830Z"
+     "start_time": "2018-11-16T15:14:07.365Z"
     },
     "scrolled": true
    },
@@ -26,26 +26,21 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Nov/2018 17:45:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 17:45:35] \"\u001b[37mGET /? HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 17:45:41] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:09] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:13] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:16] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:19] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:30] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:54] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [14/Nov/2018 18:30:56] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [16/Nov/2018 17:14:22] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [16/Nov/2018 17:14:28] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [16/Nov/2018 17:14:39] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
+    "import json\n",
+    "\n",
+    "import requests\n",
     "from flask import Flask\n",
     "from flask import request, render_template\n",
+    "\n",
     "from paper.utils import post_request\n",
-    "import requests\n",
-    "import json\n",
+    "from paper.config import *\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -56,68 +51,34 @@
     "    return render_template(\"index.html\")\n",
     "\n",
     "\n",
-    "@app.route(\"/search\", methods=['GET', 'POST'])\n",
+    "@app.route(SEARCH_PATH, methods=['GET', 'POST'])\n",
     "def search():\n",
     "    \"\"\"\n",
     "    Search server provide UI hosting and all search workflow\n",
-    "    Receive ajax post request from user interface with meta and search \n",
-    "    \n",
+    "    Receive ajax post request from user interface with meta and search  \n",
     "    \"\"\"\n",
     "    if request.method=='POST':    \n",
     "        data = request.json\n",
-    "        #  -- do some logging there --\n",
     "        meta = data['meta']\n",
-    "        #  ---------------------------\n",
-    "        \n",
-    "        #  ------ analyzing query -----\n",
     "        query = data['query']\n",
-    "        r_analyzing_query = requests.post('http://127.0.0.1:13571/analyze', json={'textes' : [query]}).text\n",
     "        \n",
-    "        stemmed_query = json.loads(r_analyzing_query)['stemmed_docs'][0]\n",
-    "        query_lang = json.loads(r_analyzing_query)['langs'][0]\n",
-    "        # ------- search and ranking docs -----\n",
-    "        query_json = {\"stemmed_query\": stemmed_query,\n",
-    "                      \"meta\":\"lalka\"}\n",
-    "        r_rank = requests.post('http://127.0.0.1:13570/rank', json=query_json).text\n",
-    "        docs = json.loads(r_rank)[\"ranked\"]\n",
+    "        analyze_json = {'textes' : [query]}\n",
+    "        r_analyzing_query = post_request(ANALYZER_PORT, ANALYZER_PATH, analyze_json)\n",
+    "        stemmed_query = r_analyzing_query['stemmed_docs'][0]\n",
+    "        query_lang = r_analyzing_query['langs'][0]\n",
+    "\n",
+    "        query_json = {\"stemmed_query\": stemmed_query, \"meta\":\"lalka\"}  \n",
+    "        r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
+    "        docs = r_rank[\"ranked\"]\n",
     "\n",
     "        return json.dumps({'status': \"ok\", \"results\": docs})\n",
     "    else:\n",
     "        return \"give me some text by post json {text: 'your text here'}\"\n",
     "    \n",
-    "    \n",
-    "    \n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(host='0.0.0.0', port=13568)"
+    "    app.run(host='0.0.0.0', port=SEARCH_PORT)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-6c12afe3f913>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-6c12afe3f913>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    обязанност должност\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "обязанност должност"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
