make doc great again!!!(as a HASH in redis database) indexing successssss

--- a/analyzer.ipynb
+++ b/analyzer.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-16T15:03:00.009Z"
+     "start_time": "2018-11-20T20:05:51.059Z"
     }
    },
    "outputs": [
@@ -25,7 +25,11 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13571/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [16/Nov/2018 17:03:06] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [20/Nov/2018 22:26:00] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Nov/2018 22:27:08] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Nov/2018 22:28:18] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Nov/2018 22:30:01] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Nov/2018 22:30:44] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
